204-Kubernetes-Microservice-Phonebook/k8s/webserver-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webserver-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webserver
  template:
    metadata:
      labels:
        app: webserver
    spec:
      containers:
      - name: webserver
        image: furkanalp/webserver
        resources:
        ports:
        - containerPort: 80
