204-Kubernetes-Microservice-Phonebook/k8s/mysql-svc.yaml
kind: Service
apiVersion: v1
metadata:
  name:  mysql-service
spec:
  selector:
    app: mysql
  type: ClusterIP
  ports:
  - port:  3306
    targetPort:  3306
