204-Kubernetes-Microservice-Phonebook/k8s/resultserver-svc.yaml
kind: Service
apiVersion: v1
metadata:
  name:  resultserver-service
spec:
  selector:
    app: resultserver
  type: NodePort
  ports:
  - port:  80
    targetPort:  80
    nodePort: 30002
