204-Kubernetes-Microservice-Phonebook/k8s/webserver-svc.yaml
kind: Service
apiVersion: v1
metadata:
  name:  webserver-service
spec:
  selector:
    app: webserver
  type: NodePort
  ports:
  - port:  80
    targetPort:  80
    nodePort: 30001
